--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -3,17 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true">
+        android:padding="10dp">
 
 
         <TextView
@@ -62,17 +61,17 @@
 
                 <TextView
                     android:id="@+id/txt_location"
-                    android:textAlignment="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.1" />
+                    android:layout_weight="0.1"
+                    android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/txt_time"
-                    android:textAlignment="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.1" />
+                    android:layout_weight="0.1"
+                    android:textAlignment="center" />
 
             </LinearLayout>
 
@@ -80,22 +79,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="@dimen/padding">
 
 
                 <SeekBar
                     android:id="@+id/sb_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0.1"
                     android:max="25"
-                    android:layout_weight="0.1" />
+                    android:padding="@dimen/cornerRound"
+                    android:thumb="@drawable/custom_seekbar" />
 
                 <SeekBar
                     android:id="@+id/sb_time"
-                    android:max="30"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.1" />
+                    android:layout_weight="0.1"
+                    android:max="30"
+                    android:padding="@dimen/padding"
+                    android:thumb="@drawable/custom_seekbar" />
 
             </LinearLayout>
 
@@ -133,6 +137,15 @@
             android:padding="@dimen/padding"
             android:text="@string/recherche_position"
             tools:ignore="RtlHardcoded" />
+
+        <TextView
+            android:id="@+id/footer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:gravity="center"
+            android:text="By Plectre"
+            android:textColor="@color/footer"/>
 
 
     </LinearLayout>
