--- a/app/src/main/res/layout/save_layout.xml
+++ b/app/src/main/res/layout/save_layout.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerInParent="true"
     android:orientation="vertical"
     android:padding="10dp"
-    android:weightSum="1">
-    >
+    android:weightSum="1"
+    android:background ="@color/background">
 
     <EditText
         android:id="@+id/etSave"
@@ -38,7 +37,5 @@
     android:layout_height="wrap_content"
     android:layout_gravity="left"
     android:text="@string/btn_annuler" />
-
-
 
 </LinearLayout>
