--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -5,5 +5,6 @@
     <dimen name="margin">20dp</dimen>
     <dimen name="padding">10dp</dimen>
     <dimen name = "padding_radio">5dp</dimen>
+    <dimen name ="cornerRound">20dp</dimen>
 
 </resources>
