--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -19,6 +19,7 @@
             android:id="@+id/txt_titre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="0.1"
             android:gravity="center"
             android:text="@string/app_name"
@@ -31,44 +32,13 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="0.1"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/delta_metre"
-                    android:textAlignment="center" />
-<!--
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/delta_seconde"
-                    android:textAlignment="center" />
--->
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/txt_location"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.1"
-                    android:textAlignment="center"
-                    android:text="0"
-                    android:textSize="45sp" />
-<!--
+                <!--
                 <TextView
                     android:id="@+id/txt_time"
                     android:layout_width="match_parent"
@@ -76,11 +46,19 @@
                     android:layout_weight="0.1"
                     android:textAlignment="center" />
 -->
+                <TextView
+                    android:id="@+id/txt_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="0"
+                    android:textSize="@dimen/h1" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="0.1"
                 android:orientation="horizontal"
                 android:padding="@dimen/padding">
@@ -90,11 +68,12 @@
                     android:id="@+id/sb_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="0.1"
-                    android:max="25"
+                    android:max="50"
                     android:padding="@dimen/cornerRound"
                     android:thumb="@drawable/custom_seekbar" />
-<!--
+                <!--
                 <SeekBar
                     android:id="@+id/sb_time"
                     android:layout_width="match_parent"
@@ -125,6 +104,8 @@
             android:layout_weight="0.1"
             android:background="@drawable/custom_button"
             android:elevation="6dp"
+            android:foreground="@drawable/custom_button"
+            android:gravity="center"
             android:padding="@dimen/padding"
             android:text="@string/demarrer_service"
             tools:layout_editor_absoluteX="23dp"
@@ -134,9 +115,11 @@
             android:id="@+id/btn_fin_position"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="@dimen/margin"
             android:layout_weight="0.1"
             android:background="@drawable/custom_button"
+            android:foreground="@drawable/custom_button"
             android:padding="@dimen/padding"
             android:text="@string/recherche_position"
             tools:ignore="RtlHardcoded" />
@@ -148,7 +131,7 @@
             android:layout_weight="0.1"
             android:gravity="center"
             android:text="By Plectre"
-            android:textColor="@color/footer"/>
+            android:textColor="@color/footer" />
 
 
     </LinearLayout>
